--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,5 +28,6 @@ subjects:
 - !lcc 'JN'
 - !lcc 'DA'
 - !lcsh 'Great Britain -- Colonies -- Administration'
+- GITenberg
 title: The Character of the British Empire
 url: http://www.gutenberg.org/ebooks/35184
